# sc_2g_heatmap

./: .gitignore  README.md  heatmap_code.py  pyproject.toml  setup.py
src/: __init__.py
src/twogroups_heatmap/: __init__.py  heatmap_code.py
